# rag-platform

backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  errors.py  logging_config.py  logging_redaction.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/auth/: __init__.py  auth_service.py  crypto.py  password.py  tokens.py
backend/tests/: conftest.py  test_admin_service.py  test_api_key_service.py  test_auth_service_login.py  test_auth_service_password_lifecycle.py  test_auth_service_register.py  test_auto_selector.py  test_chunker_config.py  test_chunkers.py  test_config_service.py  test_correlation_middleware.py  test_dependencies.py  test_document_pipeline_commit.py  test_document_pipeline_manage.py  test_document_pipeline_rechunk.py  test_document_pipeline_self_serve.py  test_document_pipeline_upload.py  test_error_handler.py  test_history_service.py  test_integration_endpoints_flow.py  test_logging_config.py  test_logging_redaction.py  test_models.py  test_password.py  test_property_account_disabled.py  test_property_admin_only.py  test_property_apikey_crypto.py  test_property_apikey_isolation.py  test_property_apikey_masked.py  test_property_apikey_resolve.py  test_property_authorization.py  test_property_auto_selector.py  test_property_boundary_rules.py  test_property_change_password_revokes.py  test_property_chunkers.py  test_property_citation_markers.py  test_property_classify_intent.py  test_property_delete_account.py  test_property_delete_paginate.py  test_property_edit_chunks.py  (+59 more)
(+74 files in other folders)
