[project]
name = "multi-user-rag-platform"
version = "0.1.0"
description = "Backend FastAPI cho nen tang RAG da nguoi dung, da linh vuc"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "bcrypt>=4.1,<5.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
